Wrap on word in tables avoids horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@
      width: 100%;
 }
  td{
-     word-break: keep-all;
+     word-break: break-word;
      border: 1px solid #4f4f4f;
      text-align: center;
      width: 10%;
@@ -87,7 +87,6 @@
      padding: 10px;
      text-align: left;
      width: 100%;
-     word-break: break-word;
 }
  code {
      font-family: inherit;
